ex2.01/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hash-pingpong-ing
spec:
  rules:
    - http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: server-svc
              port:
                number: 2345
